force-app/main/default/objects/API_Integration_Credential__mdt/API_Integration_Credential__mdt.object-meta.xml
<CustomObject>
    <label>API Integration Credential</label>
    <pluralLabel>API Integration Credentials</pluralLabel>
</CustomObject>