force-app/main/default/objects/API_Integration_Credential__mdt/fields/Server_URL__c.field-meta.xml
<CustomField>
    <fullName>Server_URL__c</fullName>
    <label>Server URL</label>
    <type>Url</type>
</CustomField>