force-app/main/default/objects/API_Integration_Credential__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>UserName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>